--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -219,5 +219,6 @@
   "noOfnunits": "No. of\\nunits",
   "unitOfnmeasurement": "Unit of\\nMeasurement",
   "payWithCash": "Pay with Cash",
-  "adminMaine": "Admin Maine"
+  "adminMaine": "Admin Maine",
+  "thisMonth": "this month"
 }
