--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -1,223 +1,224 @@
 {
-"addCost": "Добавить Расход",
-"repetitionInterval": "Интервал повторения",
-"doNotRepeat": "Не повторяется",
-"everyDay": "Каждый день",
-"name": "Название ",
-"nameOfExpense": "Название расходов",
-"selectCategories": "Выберите категорию",
-"categories": "Категории",
-"deductFromTax": "Вычесть из налога",
-"systematicExpenditure": "Систематические расходы",
-"everyWeek": "Каждую неделю",
-"everyMonth": "Каждый месяц",
-"everyQuarter": "Каждый квартал",
-"everyYear": "Каждый год",
-"numberOfUnits": "Количество единиц",
-"unitPrice": "Цена за единицу",
-"unitOfMeasurements": "Единица измерения",
-"noUnitOfMeasurements": "Нет единиц измерения",
-"save": "Сохранить",
-"addEmployee": "Добавить сотрудника",
-"enterYourName": "Введите имя",
-"changeAdminPassword": "Изменить пароль администратора",
-"exportToFile": "Экспорт в файл Excel",
-"securityQuestions": "Контрольный вопрос",
-"privacyPolicy": "Политика конфиденциальности",
-"dataBackup": "Резервное копирование данных",
-"backupData": "Резервное копирование данных",
-"restoreData": "Восстановление данных",
-"clearData": "Очистить данные",
-"areYouSureYouWantToClearAllData": "Вы уверены, что хотите очистить все данные?",
-"login": "Вход",
-"userName": "Имя пользователя",
-"password": "Пароль",
-"orSignInAs": "Или войдите как",
-"adminMaine": "Админ панель",
-"enterYourLastName": "Введите фамилию",
-"lastName": "Фамилия",
-"enterYourLogin": "Введите логин",
-"enterYourPassword": "Введите пароль",
-"selectCategoriesFromTheListnmaybeSeveral": "Выберите категории из списка\n(может быть несколько)",
-"setPercentageOfIncomeIfNecessary": "Установите процент дохода, если необходимо",
-"setPercentageOfIncome": "Установите процент дохода",
-"percentage": "Процент",
-"visibilityLevelWithACrossFromTheList": "Уровень видимости",
-"employeePercentage": "Процент сотрудника",
-"totalPercentagePerMonth": "Сумма процента в месяц",
-"amountPercentagePerDay": "Сумма процента в день",
-"showPhone": "Показать телефон",
-"totalPriceServicePerDay": "Сумма цен услуг в день",
-"saveEmployee": "Сохранить сотрудника",
-"numberOfServiceForMonth": "Количество услуг за месяц",
-"hello": "Привет ",
-"addReport": "Добавить отчет",
-"nameOfClient": "Имя клиента",
-"lastNameOfClient": "Фамилия клиента",
-"phoneNumber": "Номер телефона",
-"newCustomer": "Новый клиент",
-"regularCustomer": "Постоянный клиент",
-"paymentByCard": "Оплата наличными",
-"selectCategory": "Выберите категорию",
-"selectService": "Выберите услугу",
-"priceOfService": "Цена услуги",
-"price": "Цена",
-"submit": "Отправить",
-"addService": "Добавить услугу",
-"createOrSelectACategory": "Выберите категорию",
-"orCreateANewCategory": "Или создайте новую категорию",
-"enterCategoryName": "Введите название категории",
-"nameOfTheService": "Создайте услугу",
-"categoryName": "Название категории",
-"enterServiceName": "Введите название услуги",
-"serviceName": "Название услуги",
-"costOfMaterialsForThisServices": "Стоимость материалов для этой услуги",
-"enterPrice": "Введите цену",
-"adminLogin": "Вход администратора",
-"setAdminPassword": "Установить пароль администратора ",
-"enterPasswordHere": "Введите пароль здесь",
-"forgotPassword": "Забыли пароль?",
-"resetHere": "Сбросить здесь",
-"exit": "Выход",
-"areYouSureYouWantToExitTheApp": "Вы уверены? Вы хотите выйти из приложения.",
-"exitApp": "Выйти из приложения",
-"yes": "Да",
-"no": "Нет",
-"costsFilter": "Фильтр расходов",
-"clear": "Очистить",
-"nameOfCost": "Название расходов",
-"costsPriceRange": "Диапазон цен расходов",
-"minPrice": "Мин. цена",
-"maxPrice": "Макс. цена",
-"applyFilter": "Применить фильтр",
-"cancel": "Отмена",
-"confirm": "Подтвердить",
-"all": "Все",
-"done": "Готово",
-"newPassword": "Новый пароль",
-"editCategory": "Изменить категорию",
-"editService": "Изменить услугу",
-"answerTheSecurityQuestionsToLogin": "Ответьте на контрольный вопрос для входа",
-"answer": "Ответ",
-"incorrectAnswer": "Неправильный ответ",
-"pleaseTryAgain": "Попробуйте еще раз",
-"previousQuestion": "Предыдущий вопрос ",
-"selectQuestion": "Выберите вопрос",
-"pleaseSelectAQuestion": "Выберите вопрос",
-"pleaseFillInTheAnswerField": "Пожалуйста, заполните поле ответа",
-"report": "Отчет: ",
-"employeeName": "Имя сотрудника: ",
-"isRegularCus": "Постоянный клиент : ",
-"cardPay": "Наличные: ",
-"date": "Дата ",
-"category": "Категория: ",
-"service": "Услуга",
-"editReport": "Редактировать отчет",
-"employees": "Сотрудники",
-"noEmployeeFoundnpleaseAddANewEmployee": "Сотрудник не найден\nПожалуйста, добавьте нового сотрудника.",
-"search": "Поиск",
-"accessLevel": "Уровень доступа",
-"notLimited": "Не ограничен",
-"limited": "Ограничен",
-"applyFilters": "Применить фильтр",
-"filters": "Фильтр",
-"phone": "Телефон",
-"priceRange": "Диапазон цен",
-"dates": "Даты",
-"from": "С",
-"to": "По",
-"masters": "Сотрудники",
-"services": "Услуги",
-"selectLanguage": "Выбрать язык",
-"nameOfncost": "Название\nрасхода",
-"relatedncategories": "Связанные\nкатегории",
-"deductednfromTax": "Вычитается\nиз налога",
-"systematicnexpenditure": "Систематические\nрасходы",
-"deleteCost": "Удалить расход",
-"areYouSureYouWantToDeleteThisCost": "Вы уверены, что хотите удалить этот расход?",
-"noData": "Нет данных",
-"regncus": "Рег\nРасход",
-"cardnpay": "Наличные\nОплата",
-"employeendata": "Информация\nсотрудника",
-"customerndata": "Информация\nклиента",
-"newncus": "Новый\nРасход",
-"total": "Сумма",
-"deleted": "Удалено",
-"itemDeleted": "Удалено",
-"deleteCategory": "Удалить категорию",
-"areYouSureYouWantToDeleteThisCategory":"ArВы уверены что хотите удалить эту категорию?",
-"deleteService": "Удалить услугу",
-"areYouSureYouWantToDeleteThisService": "Вы уверены что хотите удалить эту услугу?",
-"noServicesFoundnpleaseAddANewService": "Услуги не найдено \n Пожалуйста добавьте новую услугу",
-"backupRestoredSuccessfully": "Данные восстановлены успешно!",
-"reloadApp": "Перезагрузить приложение",
-"restoringDatabase": "Восстановление базы данных…",
-"exported": "Експортовано",
-"checkYourFileInTheDownloadsFolder": "Файл находится в папке «Загрузки»",
-"selectTheDatabaseToRestore": "Выберите файл базы для восстановления",
-"reportssalesTracker": "График рапортов",
-"costsTracker": "График расходов",
-"clearDates": "Очистить данные",
-"anErrorOccurred": "Произошла ошибка",
-"noDataFound": "Данные не найдены",
-"masternname": "Имя\nсотрудника",
-"noRegnclient": "Сумма\nпостоянных",
-"noNewnclient": "Сумма\nНовых",
-"noOfnservices": "Сумма\nуслуг",
-"cost": "Расход",
-"newnclient": "Новых\nклиентов",
-"regnclient": "Постоянных\nклиентов",
-"numOfnservices": "Сумма\nуслуг",
-"costs": "Расход",
-"sales": "Продажа",
-"pleaseAddACategoryFirstToAddAnEmployee": "Сначала добавьте категорию, чтобы добавить сотрудника",
-"addCategoryFirst": "Добавьте сначала категорию",
-"logout": "Выход",
-"areYouSureYouWantToLogout": "Вы уверены? Вы хотите выйти из приложения.",
-"graphics": "Графики",
-"results": "Результаты",
-"reports": "Отчеты",
-"error": "Ошибка",
-"loginOrPasswordIsIncorrect": "Неверный логин или пароль",
-"milliliters": "Миллилитры",
-"kwh": "КВт/ч",
-"kilograms": "Килограммы",
-"letters": "Литры",
-"pieces": "Штуки",
-"grams": "Граммы",
-"boxes": "Пачки",
-"thereIsOnlyOneCostAddedYetAddMoreTo": "Добавлена ​​только один расход, добавьте еще для построения графика",
-"noCostsAddedYet": "Пока нет добавленых расходов",
-"allCostsAreAddedOnTheSameDateAddMore": "Все расходы добавлены в ту же дату, добавьте еще для построения графика",
-"settings": "Настройки",
-"statistic": "Статистика",
-"costOfMaterials": "Стоимость\nматериалов",
-"pricenservices": "Цена\nуслуг",
-"netProfit": "Прибыль (=цена услуги-цена материалов\n-процен работника-расходы в этом периоде)",
-"whatIsTheNameOfYourFavoritePet": "Как зовут вашего любимого питомца?",
-"whatsYourChildhoodNickname": "Какое било у вас прозвище в детстве?",
-"whatIsYourFavoriteMovie": "Какой ваш любимый фильм?",
-"whatIsYourFavoriteBook": "Какая ваша любимая книга?",
-"whatIsYourFavoriteFood": "Какая ваша любимая еда?",
-"whatIsYourFavoriteSong": "Какая ваша любимая песня?",
-"whatIsYourFavoriteColor": "Какой ваш любимый цвет?",
-"number": "номер",
-"viewServicesBefore7Days": "Видимости услуг больше 7 дней",
-"canAddAPhoneNumber": "Возможность добавлять номер телефона",
-"invalidPin": "Неверный PIN-код",
-"note": "Примечание",
-"enterANote": "Введите примечание",
-"characters": "символов",
-"employeeWillBeDeletedPermanently": "Сотрудник будет удален навсегда",
-"paymentByCash": "Оплата наличными",
-"optionally": " (Необязательно)",
-"piecesLitersKilograms": "Штуки, литры,килограммы … ",
-  "uniquenclients": "Unique\\nClients",
-  "setMaxRowsToKeep": "Set Max Rows to Keep",
-  "employeeInformation": "Employee Information",
-  "cashnpay": "Cash\\nPay",
-  "electricityWaterGasEtc": "Electricity, Water, Gas, etc",
-  "noOfnunits": "No. of\\nunits",
-  "unitOfnmeasurement": "Unit of\\nMeasurement",
-  "payWithCash": "Pay with Cash"
+  "addCost": "Добавить Расход",
+  "repetitionInterval": "Интервал повторения",
+  "doNotRepeat": "Не повторяется",
+  "everyDay": "Каждый день",
+  "name": "Название ",
+  "nameOfExpense": "Название расходов",
+  "selectCategories": "Выберите категорию",
+  "categories": "Категории",
+  "deductFromTax": "Вычесть из налога",
+  "systematicExpenditure": "Систематические расходы",
+  "everyWeek": "Каждую неделю",
+  "everyMonth": "Каждый месяц",
+  "everyQuarter": "Каждый квартал",
+  "everyYear": "Каждый год",
+  "numberOfUnits": "Количество единиц",
+  "unitPrice": "Цена за единицу",
+  "unitOfMeasurements": "Единица измерения",
+  "noUnitOfMeasurements": "Нет единиц измерения",
+  "save": "Сохранить",
+  "addEmployee": "Добавить сотрудника",
+  "enterYourName": "Введите имя",
+  "changeAdminPassword": "Изменить пароль администратора",
+  "exportToFile": "Экспорт в файл Excel",
+  "securityQuestions": "Контрольный вопрос",
+  "privacyPolicy": "Политика конфиденциальности",
+  "dataBackup": "Резервное копирование данных",
+  "backupData": "Резервное копирование данных",
+  "restoreData": "Восстановление данных",
+  "clearData": "Очистить данные",
+  "areYouSureYouWantToClearAllData": "Вы уверены, что хотите очистить все данные?",
+  "login": "Вход",
+  "userName": "Имя пользователя",
+  "password": "Пароль",
+  "orSignInAs": "Или войдите как",
+  "enterYourLastName": "Введите фамилию",
+  "lastName": "Фамилия",
+  "enterYourLogin": "Введите логин",
+  "enterYourPassword": "Введите пароль",
+  "selectCategoriesFromTheListnmaybeSeveral": "Выберите категории из списка\n(может быть несколько)",
+  "setPercentageOfIncomeIfNecessary": "Установите процент дохода, если необходимо",
+  "setPercentageOfIncome": "Установите процент дохода",
+  "percentage": "Процент",
+  "visibilityLevelWithACrossFromTheList": "Уровень видимости",
+  "employeePercentage": "Процент сотрудника",
+  "totalPercentagePerMonth": "Сумма процента в месяц",
+  "amountPercentagePerDay": "Сумма процента в день",
+  "showPhone": "Показать телефон",
+  "totalPriceServicePerDay": "Сумма цен услуг в день",
+  "saveEmployee": "Сохранить сотрудника",
+  "numberOfServiceForMonth": "Количество услуг за месяц",
+  "hello": "Привет ",
+  "addReport": "Добавить отчет",
+  "nameOfClient": "Имя клиента",
+  "lastNameOfClient": "Фамилия клиента",
+  "phoneNumber": "Номер телефона",
+  "newCustomer": "Новый клиент",
+  "regularCustomer": "Постоянный клиент",
+  "paymentByCard": "Оплата наличными",
+  "selectCategory": "Выберите категорию",
+  "selectService": "Выберите услугу",
+  "priceOfService": "Цена услуги",
+  "price": "Цена",
+  "submit": "Отправить",
+  "addService": "Добавить услугу",
+  "createOrSelectACategory": "Выберите категорию",
+  "orCreateANewCategory": "Или создайте новую категорию",
+  "enterCategoryName": "Введите название категории",
+  "nameOfTheService": "Создайте услугу",
+  "categoryName": "Название категории",
+  "enterServiceName": "Введите название услуги",
+  "serviceName": "Название услуги",
+  "costOfMaterialsForThisServices": "Стоимость материалов для этой услуги",
+  "enterPrice": "Введите цену",
+  "adminLogin": "Вход администратора",
+  "setAdminPassword": "Установить пароль администратора ",
+  "enterPasswordHere": "Введите пароль здесь",
+  "forgotPassword": "Забыли пароль?",
+  "resetHere": "Сбросить здесь",
+  "exit": "Выход",
+  "areYouSureYouWantToExitTheApp": "Вы уверены? Вы хотите выйти из приложения.",
+  "exitApp": "Выйти из приложения",
+  "yes": "Да",
+  "no": "Нет",
+  "costsFilter": "Фильтр расходов",
+  "clear": "Очистить",
+  "nameOfCost": "Название расходов",
+  "costsPriceRange": "Диапазон цен расходов",
+  "minPrice": "Мин. цена",
+  "maxPrice": "Макс. цена",
+  "applyFilter": "Применить фильтр",
+  "cancel": "Отмена",
+  "confirm": "Подтвердить",
+  "all": "Все",
+  "done": "Готово",
+  "newPassword": "Новый пароль",
+  "editCategory": "Изменить категорию",
+  "editService": "Изменить услугу",
+  "answerTheSecurityQuestionsToLogin": "Ответьте на контрольный вопрос для входа",
+  "answer": "Ответ",
+  "incorrectAnswer": "Неправильный ответ",
+  "pleaseTryAgain": "Попробуйте еще раз",
+  "previousQuestion": "Предыдущий вопрос ",
+  "selectQuestion": "Выберите вопрос",
+  "pleaseSelectAQuestion": "Выберите вопрос",
+  "pleaseFillInTheAnswerField": "Пожалуйста, заполните поле ответа",
+  "report": "Отчет: ",
+  "employeeName": "Имя сотрудника: ",
+  "isRegularCus": "Постоянный клиент : ",
+  "cardPay": "Наличные: ",
+  "date": "Дата ",
+  "category": "Категория: ",
+  "service": "Услуга",
+  "editReport": "Редактировать отчет",
+  "employees": "Сотрудники",
+  "noEmployeeFoundnpleaseAddANewEmployee": "Сотрудник не найден\nПожалуйста, добавьте нового сотрудника.",
+  "search": "Поиск",
+  "accessLevel": "Уровень доступа",
+  "notLimited": "Не ограничен",
+  "limited": "Ограничен",
+  "applyFilters": "Применить фильтр",
+  "filters": "Фильтр",
+  "phone": "Телефон",
+  "priceRange": "Диапазон цен",
+  "dates": "Даты",
+  "from": "С",
+  "to": "По",
+  "masters": "Сотрудники",
+  "services": "Услуги",
+  "selectLanguage": "Выбрать язык",
+  "nameOfncost": "Название\nрасхода",
+  "relatedncategories": "Связанные\nкатегории",
+  "deductednfromTax": "Вычитается\nиз налога",
+  "systematicnexpenditure": "Систематические\nрасходы",
+  "deleteCost": "Удалить расход",
+  "areYouSureYouWantToDeleteThisCost": "Вы уверены, что хотите удалить этот расход?",
+  "noData": "Нет данных",
+  "regncus": "Рег\nРасход",
+  "cardnpay": "Наличные\nОплата",
+  "employeendata": "Информация\nсотрудника",
+  "customerndata": "Информация\nклиента",
+  "newncus": "Новый\nРасход",
+  "total": "Сумма",
+  "deleted": "Удалено",
+  "itemDeleted": "Удалено",
+  "deleteCategory": "Удалить категорию",
+  "areYouSureYouWantToDeleteThisCategory": "ArВы уверены что хотите удалить эту категорию?",
+  "deleteService": "Удалить услугу",
+  "areYouSureYouWantToDeleteThisService": "Вы уверены что хотите удалить эту услугу?",
+  "noServicesFoundnpleaseAddANewService": "Услуги не найдено \n Пожалуйста добавьте новую услугу",
+  "backupRestoredSuccessfully": "Данные восстановлены успешно!",
+  "reloadApp": "Перезагрузить приложение",
+  "restoringDatabase": "Восстановление базы данных…",
+  "exported": "Експортовано",
+  "checkYourFileInTheDownloadsFolder": "Файл находится в папке «Загрузки»",
+  "selectTheDatabaseToRestore": "Выберите файл базы для восстановления",
+  "reportssalesTracker": "График рапортов",
+  "costsTracker": "График расходов",
+  "clearDates": "Очистить данные",
+  "anErrorOccurred": "Произошла ошибка",
+  "noDataFound": "Данные не найдены",
+  "masternname": "Имя\nсотрудника",
+  "noRegnclient": "Сумма\nпостоянных",
+  "noNewnclient": "Сумма\nНовых",
+  "noOfnservices": "Сумма\nуслуг",
+  "cost": "Расход",
+  "newnclient": "Новых\nклиентов",
+  "regnclient": "Постоянных\nклиентов",
+  "numOfnservices": "Сумма\nуслуг",
+  "costs": "Расход",
+  "sales": "Продажа",
+  "pleaseAddACategoryFirstToAddAnEmployee": "Сначала добавьте категорию, чтобы добавить сотрудника",
+  "addCategoryFirst": "Добавьте сначала категорию",
+  "logout": "Выход",
+  "areYouSureYouWantToLogout": "Вы уверены? Вы хотите выйти из приложения.",
+  "graphics": "Графики",
+  "results": "Результаты",
+  "reports": "Отчеты",
+  "error": "Ошибка",
+  "loginOrPasswordIsIncorrect": "Неверный логин или пароль",
+  "milliliters": "Миллилитры",
+  "kwh": "КВт/ч",
+  "kilograms": "Килограммы",
+  "letters": "Литры",
+  "pieces": "Штуки",
+  "grams": "Граммы",
+  "boxes": "Пачки",
+  "thereIsOnlyOneCostAddedYetAddMoreTo": "Добавлена ​​только один расход, добавьте еще для построения графика",
+  "noCostsAddedYet": "Пока нет добавленых расходов",
+  "allCostsAreAddedOnTheSameDateAddMore": "Все расходы добавлены в ту же дату, добавьте еще для построения графика",
+  "settings": "Настройки",
+  "statistic": "Статистика",
+  "costOfMaterials": "Стоимость\nматериалов",
+  "pricenservices": "Цена\nуслуг",
+  "netProfit": "Прибыль (=цена услуги-цена материалов\n-процен работника-расходы в этом периоде)",
+  "whatIsTheNameOfYourFavoritePet": "Как зовут вашего любимого питомца?",
+  "whatsYourChildhoodNickname": "Какое било у вас прозвище в детстве?",
+  "whatIsYourFavoriteMovie": "Какой ваш любимый фильм?",
+  "whatIsYourFavoriteBook": "Какая ваша любимая книга?",
+  "whatIsYourFavoriteFood": "Какая ваша любимая еда?",
+  "whatIsYourFavoriteSong": "Какая ваша любимая песня?",
+  "whatIsYourFavoriteColor": "Какой ваш любимый цвет?",
+  "number": "номер",
+  "viewServicesBefore7Days": "Видимости услуг больше 7 дней",
+  "canAddAPhoneNumber": "Возможность добавлять номер телефона",
+  "invalidPin": "Неверный PIN-код",
+  "note": "Примечание",
+  "enterANote": "Введите примечание",
+  "characters": "символов",
+  "employeeWillBeDeletedPermanently": "Сотрудник будет удален навсегда",
+  "paymentByCash": "Оплата наличными",
+  "optionally": " (Необязательно)",
+  "piecesLitersKilograms": "Штуки, литры,килограммы … ",
+  "uniquenclients": "Уникальный\\nклиент",
+  "setMaxRowsToKeep": "Установить максимальное количество сохраняемых строк",
+  "employeeInformation": "Информация о сотрудниках",
+  "cashnpay": "Оплата\\nналичными",
+  "electricityWaterGasEtc": "Электричество,налоги,аренда и т.д",
+  "noOfnunits": "Количество \\nединиц",
+  "unitOfnmeasurement": "Единицы\\nизмерения",
+  "payWithCash": "Оплатаналичными",
+  "adminMaine": "Панель админа",
+  "thisMonth": "в этом месяце"
 }
