--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -1,223 +1,224 @@
 {
-  "addCost": "Додати вартість",
+  "addCost": "Додати витрату",
   "repetitionInterval": "Інтервал повторення",
-  "doNotRepeat": "Не повторювати",
+  "doNotRepeat": "Не повторюється",
   "everyDay": "Щодня",
-  "name": "Ім'я ",
-  "nameOfExpense": "Назва витрат",
-  "selectCategories": "Виберіть категорії",
+  "name": "Ім'я",
+  "nameOfExpense": "Назва витрати",
+  "selectCategories": "Виберіть категорію",
   "categories": "Категорії",
-  "deductFromTax": "Вирахувати з ПОДАТКУ",
-  "systematicExpenditure": "Систематичні витрати",
-  "everyWeek": "Кожного тижня",
-  "everyMonth": "Кожного місяця",
+  "deductFromTax": "Відраховується від податку",
+  "systematicExpenditure": "Систематична витрата",
+  "everyWeek": "Щотижня",
+  "everyMonth": "Кожен місяць",
   "everyQuarter": "Кожен квартал",
-  "everyYear": "Кожного року",
+  "everyYear": "Щороку",
   "numberOfUnits": "Кількість одиниць",
-  "unitPrice": "Ціна за одиницю",
+  "unitPrice": " Ціна одиниці ",
   "unitOfMeasurements": "Одиниця вимірювання",
   "noUnitOfMeasurements": "Немає одиниць вимірювання",
   "save": "Зберегти",
-  "addEmployee": "Додати співробітника",
-  "enterYourName": "Введіть своє ім'я",
+  "addEmployee": "Додати працівника",
+  "enterYourName": "Введіть ім'я",
   "changeAdminPassword": "Змінити пароль адміністратора",
-  "exportToFile": "Експортувати у файл",
+  "exportToFile": "Експорт у файл",
   "securityQuestions": "Питання безпеки",
   "privacyPolicy": "Політика конфіденційності",
   "dataBackup": "Резервне копіювання даних",
   "backupData": "Резервне копіювання даних",
-  "restoreData": "Відновити дані",
+  "restoreData": "Відновити дані з файлу",
   "clearData": "Очистити дані",
-  "areYouSureYouWantToClearAllData": "Ви впевнені, що хочете очистити всі дані?",
-  "login": "Вхід",
+  "areYouSureYouWantToClearAllData": "Ви впевнені, що бажаєте очистити всі дані?",
+  "login": "Логін",
   "userName": "Ім'я користувача",
   "password": "Пароль",
   "orSignInAs": "Або увійдіть як",
-  "adminMaine": "Адміністратор Мейн",
-  "enterYourLastName": "Введіть своє прізвище",
+  "enterYourLastName": "Введіть прізвище",
   "lastName": "Прізвище",
-  "enterYourLogin": "Введіть свій логін",
-  "enterYourPassword": "Введіть свій пароль",
+  "enterYourLogin": "Введіть логін",
+  "enterYourPassword": "Введіть пароль",
   "selectCategoriesFromTheListnmaybeSeveral": "Виберіть категорії зі списку\n(можливо кілька)",
-  "setPercentageOfIncomeIfNecessary": "Встановити відсоток доходу, якщо необхідно",
-  "setPercentageOfIncome": "Установити відсоток доходу",
+  "setPercentageOfIncomeIfNecessary": "Відсоток доходу, якщо необхідно",
+  "setPercentageOfIncome": "Встановити відсоток доходу",
   "percentage": "Відсоток",
-  "visibilityLevelWithACrossFromTheList": " Рівень видимості з хрестиком зі списку",
-  "employeePercentage": "Відсоток працівників",
-  "totalPercentagePerMonth": "Загальний відсоток на місяць",
-  "amountPercentagePerDay": "Сума у ​​відсотках на день",
-  "showPhone": "Показати телефон",
+  "visibilityLevelWithACrossFromTheList": " Рівень видимості ",
+  "employeePercentage": "Відсоток працівника",
+  "totalPercentagePerMonth": "Загальний відсоток за місяць",
+  "amountPercentagePerDay": "Сума у відсотках на день",
+  "showPhone": "Показати номер телефону",
   "totalPriceServicePerDay": "Загальна вартість послуги за день",
   "saveEmployee": "Зберегти працівника",
   "numberOfServiceForMonth": "Кількість послуг за місяць",
-  "hello": " привіт ",
+  "hello": "Привіт ",
   "addReport": "Додати звіт",
   "nameOfClient": "Ім'я клієнта",
   "lastNameOfClient": "Прізвище клієнта",
   "phoneNumber": "Номер телефону",
   "newCustomer": "Новий клієнт",
   "regularCustomer": "Постійний клієнт",
-  "paymentByCard": "Оплата карткою",
+  "paymentByCard": "Оплата готівкою",
   "selectCategory": "Виберіть категорію",
-  "selectService": "Виберіть службу",
+  "selectService": "Виберіть послугу",
   "priceOfService": "Ціна послуги",
   "price": "Ціна",
   "submit": "Надіслати",
   "addService": "Додати послугу",
   "createOrSelectACategory": "Виберіть категорію",
-  "orCreateANewCategory": "Або створити нову категорію",
+  "orCreateANewCategory": "Або Створіть нову категорію",
   "enterCategoryName": "Введіть назву категорії",
-  "nameOfTheService": "Створіть службу",
+  "nameOfTheService": "Створити послугу",
   "categoryName": "Назва категорії",
-  "enterServiceName": "Введіть назву служби",
-  "serviceName": "Назва служби",
+  "enterServiceName": "Введіть назву послуги",
+  "serviceName": "Назва послуги",
   "costOfMaterialsForThisServices": "Вартість матеріалів для цієї послуги",
   "enterPrice": "Введіть ціну",
-  "adminLogin": "Вхід адміністратора",
+  "adminLogin": "Логін адміністратора",
   "setAdminPassword": "Установити пароль адміністратора ",
-  "enterPasswordHere": "Введіть пароль тут",
+  "enterPasswordHere": "Введіть тут пароль",
   "forgotPassword": "Забули пароль?",
   "resetHere": "Скинути тут",
   "exit": "Вихід",
-  "areYouSureYouWantToExitTheApp": "Ви впевнені? Ви хочете вийти з програми.",
-  "exitApp": "Вийти з програми",
+  "areYouSureYouWantToExitTheApp": "Ви впевнені? Ви хочете вийти з додатку.",
+  "exitApp": "Вийти з додатку",
   "yes": "Так",
-  "no": "ні",
-  "costsFilter": "Фільтр витрат",
+  "no": "Ні",
+  "costsFilter": "Фільтер витрат",
   "clear": "Очистити",
-  "nameOfCost": "Назва вартості",
-  "costsPriceRange": "Діапазон цін на витрати",
-  "minPrice": "Мінімальна ціна",
-  "maxPrice": "Максимальна ціна",
+  "nameOfCost": "Назва витрати",
+  "costsPriceRange": "діапазон ціни",
+  "minPrice": "Мін. ціна",
+  "maxPrice": "Макс. ціна",
   "applyFilter": "Застосувати фільтр",
   "cancel": "Скасувати",
   "confirm": "Підтвердити",
-  "all": "Усі",
+  "all": "Всі",
   "done": "Готово",
   "newPassword": "Новий пароль",
   "editCategory": "Редагувати категорію",
-  "editService": "Редагувати службу",
-  "answerTheSecurityQuestionsToLogin": "Дайте відповіді на таємні запитання, щоб увійти",
+  "editService": "Редагувати послугу",
+  "answerTheSecurityQuestionsToLogin": "Дайте відповідь на секретне запитання, щоб увійти",
   "answer": "Відповідь",
   "incorrectAnswer": "Неправильна відповідь",
   "pleaseTryAgain": "Будь ласка, спробуйте ще раз",
   "previousQuestion": "Попереднє запитання ",
-  "selectQuestion": "Виберіть запитання",
+  "selectQuestion": "Виберіть питання",
   "pleaseSelectAQuestion": "Будь ласка, виберіть запитання",
-  "pleaseFillInTheAnswerField": "Будь ласка, заповніть поле відповіді",
+  "pleaseFillInTheAnswerField": "Будь ласка, заповніть поле для відповіді",
   "report": "Звіт: ",
   "employeeName": "Ім'я працівника: ",
-  "isRegularCus": "Звичайний код. : ",
-  "cardPay": "Оплата карткою: ",
-  "date": "Дата",
-  "category": "Категорія ",
-  "service": "Послуая",
+  "isRegularCus": "Є звичайним кодом. : ",
+  "cardPay": "Оплата готівкою: ",
+  "date": "Дата ",
+  "category": "Категорія: ",
+  "service": "Послуга",
   "editReport": "Редагувати звіт",
-  "employees": "Співробітники",
-  "noEmployeeFoundnpleaseAddANewEmployee": "Не знайдено жодного працівника\nБудь ласка, додайте нового працівника.",
+  "employees": "Працівник",
+  "noEmployeeFoundnpleaseAddANewEmployee": "Працівника не знайдено\nДодайте нового працівника.",
   "search": "Пошук",
   "accessLevel": "Рівень доступу",
-  "notLimited": "Не обмежено",
+  "notLimited": "Немає ліміту",
   "limited": "Обмежено",
-  "applyFilters": "Застосувати фільтри",
+  "applyFilters": "Застосувати фільтр",
   "filters": "Фільтри",
   "phone": "Телефон",
-  "priceRange": "Діапазон цін",
-  "dates": "Дати",
+  "priceRange": "Ціновий діапазон",
+  "dates": "Дата",
   "from": "Від",
-  "to": "До",
-  "masters": "Майстри",
+  "to": "Дo",
+  "masters": "Працівники",
   "services": "Послуги",
   "selectLanguage": "Виберіть мову",
   "nameOfncost": "Назва\nвитрати",
-  "relatedncategories": "Пов'язані\nкатегорії",
-  "deductednfromTax": "Відрахувати\nподатку",
-  "systematicnexpenditure": "ПостійHi\nвитрати",
-  "deleteCost": "Видалити вартість",
-  "areYouSureYouWantToDeleteThisCost": "Ви впевнені, що хочете видалити цю вартість?",
+  "relatedncategories": "Схожі\nКатегорії",
+  "deductednfromTax": "Вираховано\nз податку",
+  "systematicnexpenditure": "Систематичні\nвитрати",
+  "deleteCost": "Видалити витрату",
+  "areYouSureYouWantToDeleteThisCost": "Ви впевнені, що хочете видалити цю витрату?",
   "noData": "Немає даних",
-  "regncus": "Постійний\nклієнто",
-  "cardnpay": "Oплата\nкартою",
-  "employeendata": "Дані\nпрацівника",
-  "customerndata": "Дані\nклієнта",
-  "newncus": "Новий\nклiєнT",
-  "total": "Усього",
+  "regncus": "Reg\nCus",
+  "cardnpay": "Готівка\nПлатити",
+  "employeendata": "Працівник\nІнформація",
+  "customerndata": "Клієнт\nІнформація",
+  "newncus": "Новий\nCus",
+  "total": "Всього",
   "deleted": "Видалено",
   "itemDeleted": "Елемент видалено",
   "deleteCategory": "Видалити категорію",
   "areYouSureYouWantToDeleteThisCategory": "Ви впевнені, що хочете видалити цю категорію?",
-  "deleteService": "Видалити службу",
-  "areYouSureYouWantToDeleteThisService": "Ви впевнені, що хочете видалити цю службу?",
-  "noServicesFoundnpleaseAddANewService": "Служби не знайдено\nДодайте нову службу",
+  "deleteService": "Видалити послугу",
+  "areYouSureYouWantToDeleteThisService": "Ви впевнені, що хочете видалити цю послугу?",
+  "noServicesFoundnpleaseAddANewService": "Послуг не знайдено\nДодайте нову послугу",
   "backupRestoredSuccessfully": "Резервну копію успішно відновлено!",
-  "reloadApp": "Перезавантажити програму",
+  "reloadApp": "Перезавантажити додаток",
   "restoringDatabase": "Відновлення бази даних...",
   "exported": "Експортовано",
   "checkYourFileInTheDownloadsFolder": "Перевірте свій файл у папці завантажень",
   "selectTheDatabaseToRestore": "Виберіть базу даних для відновлення",
-  "reportssalesTracker": "Звіти/відстеження продажів",
-  "costsTracker": "Відстеження витрат",
-  "clearDates": "Очистити дати",
+  "reportssalesTracker": "Графік рапортів",
+  "costsTracker": "Графік витрат",
+  "clearDates": "Очистити",
   "anErrorOccurred": "Сталася помилка",
-  "noDataFound": "Дані не знайдено",
-  "masternname": "ім'я\n працівника",
-  "noRegnclient": "Постійних\nклієнтів",
-  "noNewnclient": "Нових\nкліднтів",
+  "noDataFound": "Немає даних",
+  "masternname": "Данні\nпрацівника",
+  "noRegnclient": "№ Постійних\nклієнтів",
+  "noNewnclient": "№ Нових\nклієнтів",
   "noOfnservices": "Кількість\nпослуг",
-  "cost": "Вартість",
-  "newnclient": "Новий\nклієнт",
-  "regnclient": "Реєстраційний\nклієнт",
-  "numOfnservices": "Кількість\nслужб",
-  "costs": "витрати",
-  "costOfMaterials": "Вартість матеріалів",
-  "sales": "Продажі",
-  "pleaseAddACategoryFirstToAddAnEmployee": "Спочатку додайте категорію, щоб додати працівника",
-  "addCategoryFirst": "Додати категорію спочатку",
+  "cost": "Витрата",
+  "newnclient": "Нових\nклієнтів",
+  "regnclient": "Постійних\nклієнтів",
+  "numOfnservices": "Кількість. \nпослуг",
+  "costs": "Витрата",
+  "sales": "Продаж",
+  "pleaseAddACategoryFirstToAddAnEmployee": "Спершу додайте категорію, щоб додати працівника",
+  "addCategoryFirst": "Спочатку додайте категорію",
   "logout": "Вийти",
   "areYouSureYouWantToLogout": "Ви впевнені? Ви хочете вийти.",
   "graphics": "Графіки",
   "results": "Результати",
   "reports": "Звіти",
   "error": "Помилка",
-  "loginOrPasswordIsIncorrect": "Логін або пароль неправильні",
-  "milliliters": "Милилитры",
-  "kwh": "КВт/ч",
-  "kilograms": "Килограммы",
-  "letters": "Письма",
-  "pieces": "Части",
-  "grams": "Граммы",
-  "boxes": "Коробки",
-  "thereIsOnlyOneCostAddedYetAddMoreTo": "Добавлена ​​только одна стоимость, но добавьте еще, чтобы построить график",
-  "noCostsAddedYet": "Стоимости пока не добавлены",
-  "allCostsAreAddedOnTheSameDateAddMore": "Все затраты добавляются в одну и ту же дату, добавьте еще, чтобы построить график",
-  "settings": "Настройки",
+  "loginOrPasswordIsIncorrect": "Неправильний логін або пароль",
+  "milliliters": "Мілілітрів",
+  "kwh": "КВт/год",
+  "kilograms": "KКілограми",
+  "letters": "Літрів",
+  "pieces": "Штук",
+  "grams": "Грамів",
+  "boxes": "Пачок",
+  "thereIsOnlyOneCostAddedYetAddMoreTo": "Додано лише одну витрату, додайте ще, щоб побудувати графік",
+  "noCostsAddedYet": "Витрати ще не додано",
+  "allCostsAreAddedOnTheSameDateAddMore": "Усі витрати додаються в ту саму дату, додайте більше, щоб побудувати графік",
+  "settings": "Параметри",
   "statistic": "Статистика",
-  "pricenservices": "Цена\nуслуги",
-  "netProfit": "чистий\nприбуток",
-  "whatIsTheNameOfYourFavoritePet": "Як звуть вашу улюблену тварину?",
-  "whatsYourChildhoodNickname": "Яке ваше дитяче прізвисько?",
-  "whatIsYourFavoriteMovie": "Який твій улюблений фільм?",
+  "costOfMaterials": "Вартість\nматеріалів",
+  "pricenservices": "Ціна\nпослуги",
+  "netProfit": "Прибуток (= ціна послуги-ціна матеріалів- \n-відсоток працівника-видатки за цей період",
+  "whatIsTheNameOfYourFavoritePet": "Як звуть вашу улюблену тваринку?",
+  "whatsYourChildhoodNickname": "Яке прізвисько ви мали у дитинстві?",
+  "whatIsYourFavoriteMovie": "Який ваш улюблений фільм?",
   "whatIsYourFavoriteBook": "Яка ваша улюблена книга?",
-  "whatIsYourFavoriteFood": "Яка твоя улюблена їжа?",
-  "whatIsYourFavoriteSong": "Яка твоя улюблена пісня?",
-  "whatIsYourFavoriteColor": "Який твій улюблений колір?",
-  "number": "номер",
-  "viewServicesBefore7Days": "Переглянути послуги до 7 днів",
-  "canAddAPhoneNumber": "Можна додати номер телефону",
-  "invalidPin": "Недійсний PIN-код",
+  "whatIsYourFavoriteFood": "Яка ваша улюблена їжа?",
+  "whatIsYourFavoriteSong": "Яка ваша улюблена пісня?",
+  "whatIsYourFavoriteColor": "Який ваш улюблений колір?",
+  "number": "Число",
+  "viewServicesBefore7Days": "Видимість послуг більше 7 останніх днів",
+  "canAddAPhoneNumber": "Є можливість додати номер телефону",
+  "invalidPin": "Невірний PIN-код",
   "note": "Примітка",
   "enterANote": "Введіть примітку",
-  "characters": "персонажі",
-  "employeeWillBeDeletedPermanently": "Employee will be deleted Permanently",
-  "paymentByCash": "Payment By Cash",
-  "optionally": " (Optionally)",
-  "piecesLitersKilograms": "Pieces, Liters, Kilograms .. ",
-  "uniquenclients": "Unique\\nClients",
-  "setMaxRowsToKeep": "Set Max Rows to Keep",
-  "employeeInformation": "Employee Information",
-  "cashnpay": "Cash\\nPay",
-  "electricityWaterGasEtc": "Electricity, Water, Gas, etc",
-  "noOfnunits": "No. of\\nunits",
-  "unitOfnmeasurement": "Unit of\\nMeasurement",
-  "payWithCash": "Pay with Cash"
+  "characters": "Символів",
+  "employeeWillBeDeletedPermanently": "Працівника буде видалено назавжди",
+  "paymentByCash": "Оплата готівкою",
+  "optionally": " (необов'язково)",
+  "piecesLitersKilograms": "Штуки, літри,кілограми ... ",
+  "uniquenclients": "Унікальні\\nклієнти",
+  "setMaxRowsToKeep": "Встановити максимальну кількість рядків зберігання",
+  "employeeInformation": "Інформація про працівника",
+  "cashnpay": "Оплата\\nготівкою",
+  "electricityWaterGasEtc": "Електроенергія,податки,оренда тощо",
+  "noOfnunits": "Кількість\\nодиниць",
+  "unitOfnmeasurement": "Одиниці\\nвимірювання",
+  "payWithCash": "Оплата готівкою",
+  "adminMaine": "Адмін панель",
+  "thisMonth": "цього місяця"
 }
