--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -1,68 +1,67 @@
 {
   "addCost": "Dodaj koszt",
   "repetitionInterval": "Interwał powtórzeń",
-  "doNotRepeat": "Nie powtarzają się",
-  "everyDay": "Każdego dnia",
-  "name": "Imię",
+  "doNotRepeat": "Nie powtarza się",
+  "everyDay": "Codziennie",
+  "name": "Nazwa",
   "nameOfExpense": "Nazwa wydatku",
   "selectCategories": "Wybierz kategorie",
   "categories": "Kategorie",
-  "deductFromTax": "Odliczenie od podatku",
+  "deductFromTax": "Odliczany od podatku",
   "systematicExpenditure": "Wydatki systematyczne",
   "everyWeek": "Co tydzień",
   "everyMonth": "Co miesiąc",
   "everyQuarter": "Co kwartał",
-  "everyYear": "Co roku",
+  "everyYear": "Co rok",
   "numberOfUnits": "Liczba jednostek",
   "unitPrice": "Cena jednostkowa",
   "unitOfMeasurements": "Jednostka miary",
   "noUnitOfMeasurements": "Brak jednostki miary",
   "save": "Zapisz",
   "addEmployee": "Dodaj pracownika",
-  "enterYourName": "Wpisz swoje imię",
-  "changeAdminPassword": "Zmień hasło administratora",
-  "exportToFile": "Eksportuj do pliku",
-  "securityQuestions": "Pytania dotyczące bezpieczeństwa",
+  "enterYourName": "Wprowadź imię",
+  "changeAdminPassword": "Zmienić hasło administratora",
+  "exportToFile": "Eksportuj do pliku Excel",
+  "securityQuestions": "Pytanie bezpieczeństwa",
   "privacyPolicy": "Polityka prywatności",
   "dataBackup": "Kopia zapasowa danych",
   "backupData": "Kopia zapasowa danych",
   "restoreData": "Przywróć dane",
   "clearData": "Wyczyść dane",
   "areYouSureYouWantToClearAllData": "Czy na pewno chcesz wyczyścić wszystkie dane?",
-  "login": "Login pracownika",
-  "userName": "Nazwa użytkownika",
-  "password": "Hasto pracownika",
+  "login": "Zaloguj",
+  "userName": "Imię Użytkownika",
+  "password": "Hasło",
   "orSignInAs": "Lub zaloguj się jako",
-  "adminMaine": "Admin Maine",
-  "enterYourLastName": "Wpisz swoje nazwisko",
+  "enterYourLastName": "Wprowadź nazwisko",
   "lastName": "Nazwisko",
-  "enterYourLogin": "Wprowadź swój login",
+  "enterYourLogin": "Wprowadź login",
   "enterYourPassword": "Wprowadź swoje hasło",
-  "selectCategoriesFromTheListnmaybeSeveral": "Wybierz kategorie z listy\n(może kilka)",
-  "setPercentageOfIncomeIfNecessary": "Odsetek od dochodu Poziom widoczności in esli to konieczne",
+  "selectCategoriesFromTheListnmaybeSeveral": "Wybierz kategorie z listy\n(może być kilka)",
+  "setPercentageOfIncomeIfNecessary": "Ustaw procent dochodu, jeśli to konieczne",
   "setPercentageOfIncome": "Ustaw procent dochodu",
-  "percentage": "Odsetek",
-  "visibilityLevelWithACrossFromTheList": " Poziom widoczności z krzyżykiem z listy",
-  "employeePercentage": "Odsetek pracownika",
-  "totalPercentagePerMonth": "Całkowity procent miesięcznie",
-  "amountPercentagePerDay": "Odsetek kwoty dziennie",
-  "showPhone": "Pokaż telefon",
-  "totalPriceServicePerDay": "Całkowita cena usługi za dzień",
+  "percentage": "Procent",
+  "visibilityLevelWithACrossFromTheList": "Poziom widoczności",
+  "employeePercentage": "Procent pracownika",
+  "totalPercentagePerMonth": "Suma procentu za miesiąc",
+  "amountPercentagePerDay": "Suma procentu za dzień",
+  "showPhone": "Pokazać numer telefonu",
+  "totalPriceServicePerDay": "Suma cen usług dziennie",
   "saveEmployee": "Zapisz pracownika",
-  "numberOfServiceForMonth": "Numer usługi w miesiącu",
-  "hello": "Cześć",
+  "numberOfServiceForMonth": "Suma usług za miesiąc",
+  "hello": "Witam",
   "addReport": "Dodaj raport",
-  "nameOfClient": "Nazwa Klienta",
-  "lastNameOfClient": "Nazwisko Klienta",
+  "nameOfClient": "Imię klienta",
+  "lastNameOfClient": "Nazwisko klienta",
   "phoneNumber": "Numer telefonu",
-  "newCustomer": "Nowy Klient",
-  "regularCustomer": "Stały Klient",
-  "paymentByCard": "Płatność Kartą",
+  "newCustomer": "Nowy klient",
+  "regularCustomer": "Stały klient",
+  "paymentByCard": "Płatność gotówką",
   "selectCategory": "Wybierz kategorię",
   "selectService": "Wybierz usługę",
   "priceOfService": "Cena usługi",
   "price": "Cena",
-  "submit": "Prześlij",
+  "submit": "Wysłać",
   "addService": "Dodaj usługę",
   "createOrSelectACategory": "Wybierz kategorię",
   "orCreateANewCategory": "Lub utwórz nową kategorię",
@@ -71,152 +70,155 @@
   "categoryName": "Nazwa kategorii",
   "enterServiceName": "Wprowadź nazwę usługi",
   "serviceName": "Nazwa usługi",
-  "costOfMaterialsForThisServices": "Koszt materiałów do tej Usługi",
+  "costOfMaterialsForThisServices": "Koszt materiałów dla tej usługi",
   "enterPrice": "Wprowadź cenę",
   "adminLogin": "Logowanie administratora",
   "setAdminPassword": "Ustaw hasło administratora",
-  "enterPasswordHere": "Wpisz tutaj hasło",
+  "enterPasswordHere": "Wprowadź hasło tutaj",
   "forgotPassword": "Zapomniałeś hasła?",
   "resetHere": "Zresetuj tutaj",
   "exit": "Wyjście",
-  "areYouSureYouWantToExitTheApp": "Czy jesteś pewien? Chcesz wyjść z aplikacji.",
+  "areYouSureYouWantToExitTheApp": "Czy na pewno? Chcesz wyjść z aplikacji.",
   "exitApp": "Wyjdź z aplikacji",
   "yes": "Tak",
   "no": "Nie",
   "costsFilter": "Filtr kosztów",
   "clear": "Wyczyść",
   "nameOfCost": "Nazwa kosztu",
-  "costsPriceRange": "Przedział cenowy kosztów",
-  "minPrice": "Cena minimalna",
-  "maxPrice": "Cena maksymalna",
+  "costsPriceRange": "Zakres cen kosztów",
+  "minPrice": "Minimalna cena",
+  "maxPrice": "Maksymalna cena",
   "applyFilter": "Zastosuj filtr",
   "cancel": "Anuluj",
   "confirm": "Potwierdź",
-  "all": "wszystko",
-  "done": "gotowe",
+  "all": "Wszystko",
+  "done": "Gotowe",
   "newPassword": "Nowe hasło",
   "editCategory": "Edytuj kategorię",
   "editService": "Edytuj usługę",
-  "answerTheSecurityQuestionsToLogin": "Odpowiedz na pytania zabezpieczające, aby się zalogować",
-  "answer": "odpowiedź",
+  "answerTheSecurityQuestionsToLogin": "Odpowiedz na pytania bezpieczeństwa, aby się zalogować",
+  "answer": "Odpowiedz",
   "incorrectAnswer": "Niepoprawna odpowiedź",
   "pleaseTryAgain": "Spróbuj ponownie",
-  "previousQuestion": "Poprzednie pytanie ",
+  "previousQuestion": "Poprzednie pytanie",
   "selectQuestion": "Wybierz pytanie",
-  "pleaseSelectAQuestion": "Proszę wybrać pytanie",
-  "pleaseFillInTheAnswerField": "Proszę wypełnić pole odpowiedzi",
+  "pleaseSelectAQuestion": "Wybierz pytanie",
+  "pleaseFillInTheAnswerField": "Wypełnij pole odpowiedzi",
   "report": "Raport: ",
-  "employeeName": "Nazwisko pracownika: ",
-  "isRegularCus": "Jest zwykłym zwyczajem: ",
-  "cardPay": "Płatność kartą: ",
-  "date": "Data",
+  "employeeName": "Nazwa pracownika: ",
+  "isRegularCus": "Stały klient. : ",
+  "cardPay": "Płatność gotówką: ",
+  "date": "Data ",
   "category": "Kategoria: ",
-  "service": "usługa ",
+  "service": "Usługa",
   "editReport": "Edytuj raport",
-  "employees": "pracownicy",
-  "noEmployeeFoundnpleaseAddANewEmployee": "Nie znaleziono pracownika\nProszę dodać nowego pracownika.",
+  "employees": "Pracownicy",
+  "noEmployeeFoundnpleaseAddANewEmployee": "Nie znaleziono pracowników\nDodaj nowego pracownika.",
   "search": "Szukaj",
   "accessLevel": "Poziom dostępu",
-  "notLimited": "Bez ograniczeń",
-  "limited": "ograniczony",
-  "applyFilters": "Zastosuj filtry",
-  "filters": "Filtry",
+  "notLimited": "Nieograniczony",
+  "limited": "Ograniczony",
+  "applyFilters": "Zastosuj filtr",
+  "filters": "Filtr",
   "phone": "Telefon",
-  "priceRange": "Przedział cenowy",
+  "priceRange": "Zakres cen",
   "dates": "Daty",
-  "from": "od",
-  "to": "do",
-  "masters": "mistrzowie",
+  "from": "Od",
+  "to": "Do",
+  "masters": "Pracowniki",
   "services": "Usługi",
   "selectLanguage": "Wybierz język",
-  "nameOfncost": "Nazwa\nKosztu",
-  "relatedncategories": "Powiązane\nKategorie",
-  "deductednfromTax": "Odliczone\nOd podatku",
-  "systematicnexpenditure": "Koszty\nsystematyczne",
+  "nameOfncost": "Nazwa\nkosztu",
+  "relatedncategories": "Powiązane\nkategorie",
+  "deductednfromTax": "Może być odliczone\nod podatku",
+  "systematicnexpenditure": "Systematyczne\nwydatki",
   "deleteCost": "Usuń koszt",
   "areYouSureYouWantToDeleteThisCost": "Czy na pewno chcesz usunąć ten koszt?",
   "noData": "Brak danych",
-  "regncus": "Stasy\nklient",
-  "cardnpay": "Karta\nZapłać",
-  "employeendata": "Dane pracownika\n",
-  "customerndata": "Dane klienta\n",
-  "newncus": "Placone\nkarta",
-  "total": "Łącznie",
-  "deleted": "usunięte",
+  "regncus": "Stały\nklient",
+  "cardnpay": "Płatność\ngotówką",
+  "employeendata": "Informacja\no pracownikowi",
+  "customerndata": "Informacja\no kliencie",
+  "newncus": "Nowy\nklient",
+  "total": "Suma",
+  "deleted": "Usunięto",
   "itemDeleted": "Element usunięty",
-  "deleteCategory": "Usuń kategorię",
+  "deleteCategory": "Usunięta kategoria",
   "areYouSureYouWantToDeleteThisCategory": "Czy na pewno chcesz usunąć tę kategorię?",
   "deleteService": "Usuń usługę",
-  "areYouSureYouWantToDeleteThisService": "Czy na pewno chcesz usunąć tę usługę?",
+  "areYouSureYouWantToDeleteThisService": "Czy na pewno chcesz usunąć tę usługę??",
   "noServicesFoundnpleaseAddANewService": "Nie znaleziono usług\nProszę dodać nową usługę",
-  "backupRestoredSuccessfully": "Kopia zapasowa została przywrócona pomyślnie!",
-  "reloadApp": "Załaduj ponownie aplikację",
-  "restoringDatabase": "Przywracanie bazy danych...",
-  "exported": "Wyeksportowane",
+  "backupRestoredSuccessfully": "Kopia zapasowa przywrócona pomyślnie!",
+  "reloadApp": "Przeładuj aplikację",
+  "restoringDatabase": "Przewracanie bazę danych…",
+  "exported": "Eksportowano",
   "checkYourFileInTheDownloadsFolder": "Sprawdź swój plik w folderze Pobrane",
   "selectTheDatabaseToRestore": "Wybierz bazę danych do przywrócenia",
-  "reportssalesTracker": "Monitor raportów/sprzedaży",
-  "costsTracker": "Śledzenie kosztów",
-  "clearDates": "Wyczyść daty",
+  "reportssalesTracker": "Harmonogram raportów",
+  "costsTracker": "Harmonogram wydatków",
+  "clearDates": "Wyczyść dane",
   "anErrorOccurred": "Wystąpił błąd",
-  "noDataFound": "Nie znaleziono danych",
-  "masternname": "Master\nNazwa",
-  "noRegnclient": "Nr rej\nKlient",
-  "noNewnclient": "Nie. Nowy\nKlient",
-  "noOfnservices": "Liczba\nusług",
+  "noDataFound": "nie znaleziono danych",
+  "masternname": "Imię\npracownika",
+  "noRegnclient": "Stałych\nklientów",
+  "noNewnclient": "Nowych\nklientów",
+  "noOfnservices": "Ilośc\nusług",
   "cost": "Koszt",
-  "newnclient": "Nowy\nKlient",
-  "regnclient": "Zarejestruj\nKlienta",
+  "newnclient": "Nowy\nclient",
+  "regnclient": "Stały\nklient",
   "numOfnservices": "Liczba\nusług",
   "costs": "Koszty",
   "sales": "Sprzedaż",
-  "PleaseAddACategoryFirstToAddAnEmployee": "Aby dodać pracownika, proszę najpierw dodać kategorię",
+  "pleaseAddACategoryFirstToAddAnEmployee": "Najpierw dodaj kategorię, aby dodać pracownika",
   "addCategoryFirst": "Najpierw dodaj kategorię",
-  "logout": "Wyloguj się",
-  "areYouSureYouWantToLogout": "Czy jesteś pewien? Chcesz się wylogować.",
-  "graphics": "Wykresy",
+  "logout": "Wylogować się",
+  "areYouSureYouWantToLogout": "Czy na pewno chcesz się wylogować.",
+  "graphics": "Harmonogram",
   "results": "Wyniki",
   "reports": "Raporty",
   "error": "Błąd",
-  "loginOrPasswordIsIncorrect": "Login lub hasło są nieprawidłowe",
-  "milliliters": "KW/h",
+  "loginOrPasswordIsIncorrect": "Nieprawidłowe login lub hasło",
+  "milliliters": "Mililitry",
+  "kwh": "KW/h",
   "kilograms": "Kilogramy",
-  "letters": "Liters",
-  "pieces": "kawałki",
-  "grams": "gramy",
-  "boxes": "pudełka",
-  "thereIsOnlyOneCostAddedYetAddMoreTo": "Dodano tylko jeden koszt, ale dodaj więcej, aby wykreślić wykres",
-  "noCostsAddedYet": "Nie dodano jeszcze żadnych kosztów",
-  "allCostsAreAddedOnTheSameDateAddMore": "Wszystkie koszty są dodawane tego samego dnia, dodaj więcej, aby narysować wykres",
+  "letters": "Litry",
+  "pieces": "Sztuki",
+  "grams": "Gramy",
+  "boxes": "Pudełka",
+  "thereIsOnlyOneCostAddedYetAddMoreTo": "Dodano tylko jeden koszt, dodaj więcej, aby wykreślić wykres",
+  "noCostsAddedYet": "Żadnych kosztów jeszcze nie dodano",
+  "allCostsAreAddedOnTheSameDateAddMore": "Wszystkie koszty zostały dodane w tym samym dniu, dodaj więcej, aby wykreślić wykres",
   "settings": "Ustawienia",
   "statistic": "Statystyka",
   "costOfMaterials": "Koszt\nmateriałów",
   "pricenservices": "Cena\nusług",
-  "netProfit": "Zysk\nnetto",
+  "netProfit": "Zysk(=cena usługi- cena materiałów-procent\npracownika- wydatki za ten okres)",
   "whatIsTheNameOfYourFavoritePet": "Jak ma na imię Twoje ulubione zwierzątko?",
   "whatsYourChildhoodNickname": "Jaki jest Twój pseudonim z dzieciństwa?",
-  "whatIsYourFavoriteMovie": "Jaki jest twój ulubiony film?",
+  "whatIsYourFavoriteMovie": "Jaki jest Twój ulubiony film?",
   "whatIsYourFavoriteBook": "Jaka jest Twoja ulubiona książka?",
   "whatIsYourFavoriteFood": "Jakie jest Twoje ulubione jedzenie?",
-  "whatIsYourFavoriteSong": "Jaka jest twoja ulubiona piosenka?",
-  "whatIsYourFavoriteColor": "Jaki jest twój ulubiony kolor?",
-  "number": "numer",
-  "viewServicesBefore7Days": "Wyświetl usługi sprzed 7 dni",
-  "canAddAPhoneNumber": "Można dodać numer telefonu",
+  "whatIsYourFavoriteSong": "Jaka jest twoja ulubiona piosenka",
+  "whatIsYourFavoriteColor": "Jaki jest Twój ulubiony kolor?",
+  "number": "liczba",
+  "viewServicesBefore7Days": "Wyświetlać usługi więcej niż z przed 7 dni",
+  "canAddAPhoneNumber": "Może dodać numer telefonu klienta",
   "invalidPin": "Nieprawidłowy kod PIN",
-  "note": "Uwaga",
+  "note": "Notatka",
   "enterANote": "Wprowadź notatkę",
   "characters": "znaki",
-  "employeeWillBeDeletedPermanently": "Pracownik zostanie trwale usunięty",
+  "employeeWillBeDeletedPermanently": "Pracownik zostanie usunięty",
   "paymentByCash": "Płatność gotówką",
-  "optionally": "(Opcjonalnie)",
-  "piecesLitersKilograms": "Sztuki, Litry, Kilogramy ..",
-  "uniquenclients": "Unique\\nClients",
-  "setMaxRowsToKeep": "Set Max Rows to Keep",
-  "employeeInformation": "Employee Information",
-  "cashnpay": "Cash\\nPay",
-  "electricityWaterGasEtc": "Electricity, Water, Gas, etc",
-  "noOfnunits": "No. of\\nunits",
-  "unitOfnmeasurement": "Unit of\\nMeasurement",
-  "payWithCash": "Pay with Cash"
+  "optionally": " (Opcjonalnie)",
+  "piecesLitersKilograms": "Sztuki, Litry, Kilogramy ... ",
+  "uniquenclients": "Unikalni\\nużytkownicy",
+  "setMaxRowsToKeep": "Ustaw maksymalną liczbę wierszy do zachowania",
+  "employeeInformation": "Informacje o pracowniku",
+  "cashnpay": "Płatność\\ngotówką",
+  "electricityWaterGasEtc": "Prąd, podatki,czynsz, itp",
+  "noOfnunits": "Liczba\\njednostek",
+  "unitOfnmeasurement": "jednostki\\nmiary",
+  "payWithCash": "Płatność gotówką",
+  "adminMaine": "Panel admina",
+  "thisMonth": "w tym miesiącu"
 }
