font style removed

--- a/lib/l10n/intl_bg.arb
+++ b/lib/l10n/intl_bg.arb
@@ -137,7 +137,7 @@
   "areYouSureYouWantToDeleteThisCost": "Сигурни ли сте, че искате да изтриете тази цена?",
   "noData": "Няма данни",
   "regncus": "Reg\nCus",
-  "cardnpay": "Плащане с карта\n",
+  "cardnpay": "Плащане \nс карта",
   "employeendata": "Данни за \nслужителя",
   "customerndata": "Клиентски\nданни",
   "newncus": "Нов\nCus",
