--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -200,7 +200,7 @@
   "whatIsYourFavoriteFood": "Jakie jest Twoje ulubione jedzenie?",
   "whatIsYourFavoriteSong": "Jaka jest twoja ulubiona piosenka",
   "whatIsYourFavoriteColor": "Jaki jest Twój ulubiony kolor?",
-  "number": "liczba",
+  "number": "Numer",
   "viewServicesBefore7Days": "Wyświetlać usługi więcej niż z przed 7 dni",
   "canAddAPhoneNumber": "Może dodać numer telefonu klienta",
   "invalidPin": "Nieprawidłowy kod PIN",
@@ -211,14 +211,20 @@
   "paymentByCash": "Płatność gotówką",
   "optionally": " (Opcjonalnie)",
   "piecesLitersKilograms": "Sztuki, Litry, Kilogramy ... ",
-  "uniquenclients": "Unikalni\\nużytkownicy",
+  "uniquenclients": "Unikalni\nużytkownicy",
   "setMaxRowsToKeep": "Ustaw maksymalną liczbę wierszy do zachowania",
   "employeeInformation": "Informacje o pracowniku",
-  "cashnpay": "Płatność\\ngotówką",
+  "cashnpay": "Płatność\ngotówką",
   "electricityWaterGasEtc": "Prąd, podatki,czynsz, itp",
-  "noOfnunits": "Liczba\\njednostek",
-  "unitOfnmeasurement": "jednostki\\nmiary",
+  "noOfnunits": "Liczba\njednostek",
+  "unitOfnmeasurement": "jednostki\nmiary",
   "payWithCash": "Płatność gotówką",
   "adminMaine": "Panel admina",
-  "thisMonth": "w tym miesiącu"
+  "thisMonth": "w tym miesiącu",
+  "charactersLeft": "pozostało znaków",
+  "selectDates": "Wybierz daty",
+  "exportReports": "Eksportuj raporty",
+  "exportCosts": "Koszty eksportu",
+  "reportsLimit": "Limit raportów",
+  "costsLimit": "Limit kosztów"
 }
