--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -220,5 +220,11 @@
   "unitOfnmeasurement": "Unit of\\nMeasurement",
   "payWithCash": "Pay with Cash",
   "adminMaine": "Admin Maine",
-  "thisMonth": "this month"
+  "thisMonth": "this month",
+  "charactersLeft": "characters left",
+  "selectDates": "Select Dates",
+  "exportReports": "Export Reports",
+  "exportCosts": "Export Costs",
+  "reportsLimit": "Reports Limit",
+  "costsLimit": "Costs Limit"
 }
